--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,47 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "addinslist"]
+	path = addinslist
+	url = https://github.com/daattali/addinslist
+	shallow = true
+[submodule "colourpicker"]
+	path = colourpicker
+	url = https://github.com/daattali/colourpicker
+	shallow = true
+[submodule "ddpcr"]
+	path = ddpcr
+	url = https://github.com/daattali/ddpcr
+	shallow = true
+[submodule "ggExtra"]
+	path = ggExtra
+	url = https://github.com/daattali/ggextra
+	shallow = true
+[submodule "lightsout"]
+	path = lightsout
+	url = https://github.com/daattali/lightsout
+	shallow = true
+[submodule "shinyalert"]
+	path = shinyalert
+	url = https://github.com/daattali/shinyalert
+	shallow = true
+[submodule "shinycssloaders"]
+	path = shinycssloaders
+	url = https://github.com/daattali/shinycssloaders
+	shallow = true
+[submodule "shinydisconnect"]
+	path = shinydisconnect
+	url = https://github.com/daattali/shinydisconnect
+	shallow = true
+[submodule "shinyjs"]
+	path = shinyjs
+	url = https://github.com/daattali/shinyjs
+	shallow = true
+[submodule "shinyscreenshot"]
+	path = shinyscreenshot
+	url = https://github.com/daattali/shinyscreenshot
+	shallow = true
+[submodule "timevis"]
+	path = timevis
+	url = https://github.com/daattali/timevis
+	shallow = true
