--- a/.gitmodules
+++ b/.gitmodules
@@ -7,43 +7,54 @@
 	path = addinslist
 	url = https://github.com/daattali/addinslist
 	shallow = true
+	registered = true
 [submodule "colourpicker"]
 	path = colourpicker
 	url = https://github.com/daattali/colourpicker
 	shallow = true
+	registered = true
 [submodule "ddpcr"]
 	path = ddpcr
 	url = https://github.com/daattali/ddpcr
 	shallow = true
+	registered = true
 [submodule "ggExtra"]
 	path = ggExtra
 	url = https://github.com/daattali/ggextra
 	shallow = true
+	registered = true
 [submodule "lightsout"]
 	path = lightsout
 	url = https://github.com/daattali/lightsout
 	shallow = true
+	registered = true
 [submodule "shinyalert"]
 	path = shinyalert
 	url = https://github.com/daattali/shinyalert
 	shallow = true
+	registered = true
 [submodule "shinycssloaders"]
 	path = shinycssloaders
 	url = https://github.com/daattali/shinycssloaders
 	shallow = true
+	registered = true
 [submodule "shinydisconnect"]
 	path = shinydisconnect
 	url = https://github.com/daattali/shinydisconnect
 	shallow = true
+	registered = true
 [submodule "shinyjs"]
 	path = shinyjs
 	url = https://github.com/daattali/shinyjs
 	shallow = true
+	registered = true
 [submodule "shinyscreenshot"]
 	path = shinyscreenshot
 	url = https://github.com/daattali/shinyscreenshot
 	shallow = true
+	registered = true
 [submodule "timevis"]
 	path = timevis
 	url = https://github.com/daattali/timevis
 	shallow = true
+	registered = true
