--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,11 @@
 	url = https://github.com/daattali/colourpicker
 	shallow = true
 	registered = true
+[submodule "ddpcr"]
+	path = ddpcr
+	url = https://github.com/daattali/ddpcr
+	shallow = true
+	registered = true
 [submodule "ggExtra"]
 	path = ggExtra
 	url = https://github.com/daattali/ggextra
